<resources>
    <string name="app_name">Who Wants to Be a Millionaire</string>
    <!-- home screen -->
    <string name="be_the_next_millionaire">Be the next millionaire!</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="sounds_on">Sounds: On</string>
    <string name="sounds_off">Sounds: Off</string>
    <string name="exit">Exit</string>
    <!-- about screen -->
    <string name="game_roles">Game Roles</string>
    <string name="game_roles_details">Who Wants to Be a Millionaire is a cultural game, consists of 15 questions from different categories, such as geography, science, entertainment, etc. First five questions are easy in difficulty, second ones are medium, and last five are hard. \nYou can use help options if the you’re not sure about the answer:\n  • Audience answers.\n  • Call a friend.\n  • Replace the question.\n  • Delete two options.\nYou’ll get dollar rewards for each question you got right, starting from 100$ to 1,000,000$. Have fun!</string>
    <string name="app_developers">App Developers</string>
    <string name="app_developers_details">Mustafa Ahmed\nWesam Nabeel\nShahad Abdulhasan\nMostafa Mohamed\nRawad Jamal\nMohammed Najm\nSalah Hasan</string>
    <!-- game screen -->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <!-- stage screen -->
    <string name="current_stage">Current Stage</string>
    <string name="tap_to_continue">Tap to continue</string>
    <!-- result screen -->
    <!-- error screen -->
    <!-- other strings -->
    <string name="i_think_the_answer_is">I think the answer is</string>
    <string name="calling_a_friend">Calling a Friend…</string>
    <string name="are_you_sure_n_your_progress_won_t_be_saved">Are you sure?\n your progress won’t be saved.</string>
    <string name="audience_votes">Audience Votes</string>
    <string name="ok">OK</string>
    <string name="stay">Stay</string>
    <string name="leave">leave</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loss_message">Unfortunately, you didn’t pass all questions... But you can try again and again to get the million dollars!</string>
    <string name="loss_text">You\'ve lost</string>
    <string name="play_again">Play again</string>
    <string name="winning_message">You’ve answered all questions, and earned 1,000,000 $!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="back_to_home">Back to home</string>
    <string name="you_passed">You passed</string>
    <string name="and_got">And got</string>
</resources>