<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.frenchfriesfamily.whowantstobeamillionaire.view.result.ResultsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_dark"
        tools:context=".winning">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/winner_badge"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/spacing_extra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winner_text"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/winner_badge" />

        <TextView
            android:id="@+id/winner_text"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/congratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/winner_textView"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_extra_large"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:gravity="center"
            android:text="@string/winning_message"
            android:textAlignment="center"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winner_badge" />

        <ImageView
            android:id="@+id/play_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            app:layout_constraintBottom_toTopOf="@+id/back_to_home_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_play_again_btn" />

        <TextView
            android:id="@+id/play_again_text"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="@+id/play_again_btn"
            app:layout_constraintEnd_toEndOf="@+id/play_again_btn"
            app:layout_constraintStart_toStartOf="@+id/play_again_btn"
            app:layout_constraintTop_toTopOf="@+id/play_again_btn" />


        <ImageView
            android:id="@+id/back_to_home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back_to_home_btn" />

        <TextView
            android:id="@+id/back_to_home_text"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            app:layout_constraintBottom_toBottomOf="@+id/back_to_home_btn"
            app:layout_constraintEnd_toEndOf="@+id/back_to_home_btn"
            app:layout_constraintStart_toStartOf="@+id/back_to_home_btn"
            app:layout_constraintTop_toTopOf="@+id/back_to_home_btn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_dark"
            >

            <ImageView
                android:id="@+id/lossing_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_extra_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loss_text"
                app:srcCompat="@drawable/sad_image" />

            <TextView
                android:id="@+id/loss_text"
                style="@style/TextStyle.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="@string/loss_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loss_textView"
                style="@style/TextStyle.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_extra_large"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/loss_message"
                android:textAlignment="center"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lossing_badge" />


            <TextView
                android:id="@+id/pass_title"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/you_passed"
                app:layout_constraintStart_toStartOf="@+id/loss_textView"
                app:layout_constraintTop_toBottomOf="@+id/loss_textView" />

            <TextView
                android:id="@+id/text_level"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                app:layout_constraintStart_toEndOf="@+id/pass_title"
                app:layout_constraintTop_toTopOf="@+id/pass_title"
                tools:text="6" />


            <TextView
                android:id="@+id/got_title"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_extra_small"
                android:text="@string/and_got"
                app:layout_constraintEnd_toStartOf="@+id/text_money"
                app:layout_constraintTop_toTopOf="@+id/text_money" />

            <TextView
                android:id="@+id/text_money"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/loss_textView"
                app:layout_constraintTop_toBottomOf="@+id/loss_textView"
                tools:text="7,500 $ " />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>