<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.frenchfriesfamily.whowantstobeamillionaire.view.game.GameViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="24dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:paddingVertical="@dimen/spacing_large">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextStyle.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/calling_a_friend" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_medium">


                <ImageView
                    android:id="@+id/image_human_thinking"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/man_thinking"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_i_think"
                    style="@style/TextStyle.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/i_think_the_answer_is"
                    android:textColor="@color/purple_lightest"
                    app:layout_constraintStart_toEndOf="@+id/image_human_thinking"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_answer"
                    style="@style/TextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="B"
                    android:textColor="@color/yellow_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/text_i_think"
                    app:layout_constraintStart_toStartOf="@+id/text_i_think"
                    app:layout_constraintTop_toBottomOf="@+id/text_i_think" />

                <ImageView
                    android:id="@+id/horizontal_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/horizontal_line"
                    app:layout_constraintBottom_toBottomOf="@+id/image_human_thinking"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/image_human_thinking"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                style="@style/TextStyle.Small"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/button_green"
                android:text="@string/ok" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>