<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loss"
        android:background="@color/purple_dark">


        <ImageView
            android:id="@+id/image_winner_badge"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_winning"
            app:srcCompat="@drawable/sad_face" />

        <TextView
            android:id="@+id/text_winning"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/loss_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_winning_massege"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/loss_message"
            android:textAlignment="center"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_winner_badge" />

        <ImageView
            android:id="@+id/button_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/button_back_to_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_play_again_btn" />

        <TextView
            android:id="@+id/text_play_again"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="@+id/button_play_again"
            app:layout_constraintEnd_toEndOf="@+id/button_play_again"
            app:layout_constraintStart_toStartOf="@+id/button_play_again"
            app:layout_constraintTop_toTopOf="@+id/button_play_again" />


        <ImageView
            android:id="@+id/button_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back_to_home_btn" />

        <TextView
            android:id="@+id/text_back_to_home"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Back to home"
            app:layout_constraintBottom_toBottomOf="@+id/button_back_to_home"
            app:layout_constraintEnd_toEndOf="@+id/button_back_to_home"
            app:layout_constraintStart_toStartOf="@+id/button_back_to_home"
            app:layout_constraintTop_toTopOf="@+id/button_back_to_home" />

        <TextView
            android:id="@+id/text_pass_title"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="You passed "
            app:layout_constraintStart_toStartOf="@+id/text_winning_massege"
            app:layout_constraintTop_toBottomOf="@+id/text_winning_massege" />

        <TextView
            android:id="@+id/text_pass_result"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            app:layout_constraintStart_toEndOf="@+id/text_pass_title"
            app:layout_constraintTop_toTopOf="@+id/text_pass_title"
            tools:text="6" />


        <TextView
            android:id="@+id/text_got_title"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="And got "
            app:layout_constraintEnd_toStartOf="@+id/text_got_result"
            app:layout_constraintTop_toTopOf="@+id/text_got_result" />

        <TextView
            android:id="@+id/text_got_result"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/text_winning_massege"
            app:layout_constraintTop_toBottomOf="@+id/text_winning_massege"
            tools:text="7,500 $ " />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>